# ConmanDictionary

./: .boring  .gitignore  .project  ConmanDictionary.sln  Doxyfile  MANIFEST.stub  README.md  README.txt  bindtest.sh  bindtest.xml  build.xml  cmd-convert.tailor  conmandictionary.sh  dictionary.xsd  nbactions.xml  pom.xml
.externalToolBuilders/: Ant builder.launch
ConmanDictionary/: AboutWindow.axaml  AboutWindow.axaml.cs  App.axaml  App.axaml.cs  ConmanDictionary.csproj  LanguagePanel.xaml  LanguagePanel.xaml.cs  MainWindow.axaml  MainWindow.axaml.cs  SearchBox.axaml  SearchBox.xaml
ConmanDictionaryOld/: AboutBox.Designer.cs  AboutBox.cs  App.xaml  App.xaml.cs  ConmanDictionaryOld.csproj  MainWindow.xaml  MainWindow.xaml.cs  SearchBox.xaml.cs
DictTool/: DictTool.csproj  Program.cs  TestOutput.cs
DictionaryDocument/: Dictionary.cs  DictionaryDocument.csproj  Generators.cs
DictionaryDocument.Tests/: DictionaryDocument.Tests.csproj  DictionaryDocument_LoadDictx.cs  DictionaryDocument_SaveDictx.cs  Generators.cs  TODO.md
TryConcept/: Program.cs  TryConcept.csproj
conman_dictionary/: Cargo.toml
conmandictionary/: CMakeLists.txt  Cargo.toml  conmandictionary.pro  dictionary_data.cpp  dictionary_data.h  document_model_prototest.cpp  languagepanel.cpp  languagepanel.h  languagepanel.ui  mainwindow.ui  searchwidget.ui
conmandictionary/conmandictionary/: Cargo.toml
conmandictionary/dict-tool/: Cargo.toml
conmandictionary/dict-tool/src/: main.rs
csharp/: ConmanDictionary.slnx
docfx/: index.md
docs/: Gemfile  _config.yml  about.markdown  build.markdown  (+10 more)
(+180 files in other folders)
