[package]
name = "dict-tool"
description = "Command-line tool for manipulating Conman's Dictionary .dictx XML files."
authors = ["Rose Midford <wwwwolf@iki.fi>"]
homepage = "https://umbraroze.github.io/ConmanDictionary/"
license = "GPL-3.0-or-later"
version = "2.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

[dependencies.dictx]
path = "../dictx"
